# nodeeditor

./: .gitignore  .gitlab-ci.yml  .gitmodules  .iwyu-imp  .iwyu-qt-imp  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
cmake/: QtNodesConfig.cmake.in
examples/: CMakeLists.txt
examples/acquisition_viewer/: AcqModel.cpp  AcqModel.hpp  CMakeLists.txt
examples/calculator/: CMakeLists.txt  MathOperationDataModel.cpp  NumberSourceDataModel.cpp
examples/calculator_qml/: CMakeLists.txt  MathOperationDataModel.cpp  NumberDisplayDataModel.cpp  QmlWrapper.cpp  QmlWrapper.hpp  StringDataModel.hpp  main.cpp  main.qml
examples/calculator_tbb/: AdditionModel.hpp  CMakeLists.txt  DecimalData.hpp  DivisionModel.hpp  Helpers.hpp  MathOperationDataModel.cpp  MathOperationDataModel.hpp  MultiplicationModel.hpp  NumberDisplayDataModel.cpp  NumberDisplayDataModel.hpp  NumberSourceDataModel.cpp  NumberSourceDataModel.hpp  SubtractionModel.hpp  TbbDataModel.cpp  TbbDataModel.hpp  example.flow  main.cpp
examples/compute_viewer/: CMakeLists.txt  DecimationData.hpp  DecimationModel.cpp  DecimationModel.hpp  DecimationWidget.cpp  DecimationWidget.hpp  InputData.hpp  InputModel.cpp  main.cpp
examples/connection_colors/: CMakeLists.txt  main.cpp
examples/dynamic_ports/: CMakeLists.txt  DynamicPortsModel.cpp  PortAddRemoveWidget.cpp  PortAddRemoveWidget.hpp
examples/lock_nodes_and_connections/: CMakeLists.txt
examples/resizable_images/: CMakeLists.txt  ImageLoaderModel.cpp  main.cpp
examples/simple_graph_model/: CMakeLists.txt  SimpleGraphModel.cpp
examples/styles/: CMakeLists.txt  main.cpp
examples/text/: CMakeLists.txt  TextDisplayDataModel.cpp  TextSourceDataModel.cpp
examples/vertical_layout/: CMakeLists.txt  SimpleGraphModel.cpp
include/QtNodes/internal/: AbstractGraphModel.hpp  AbstractNodeGeometry.hpp  DefaultHorizontalNodeGeometry.hpp  NodeDelegateModel.hpp
src/: AbstractGraphModel.cpp  ConnectionGraphicsObject.cpp  DataFlowGraphModel.cpp  DataFlowGraphicsScene.cpp  DefaultHorizontalNodeGeometry.cpp  GraphicsView.cpp
